[gd_scene format=3 uid="uid://bhrfvdnwui1om"]

[ext_resource type="Script" uid="uid://vb1y55hgt4gt" path="res://globals/pause_menu.gd" id="1_3al74"]
[ext_resource type="FontFile" uid="uid://bxpfu70psooq6" path="res://assets/fonts/Kenney Blocks.ttf" id="1_rhd5n"]
[ext_resource type="PackedScene" uid="uid://b0chgmbsedj0o" path="res://user_interface/volume_slider.tscn" id="3_lxy0p"]
[ext_resource type="AudioStream" uid="uid://dq5ektnku728m" path="res://assets/sounds/pause.wav" id="3_q1l4m"]
[ext_resource type="AudioStream" uid="uid://dgn0b8ag2wfs5" path="res://assets/sounds/unpause.wav" id="4_lxy0p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3al74"]
bg_color = Color(0.13333334, 0.13333334, 0.13333334, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6nv7"]
bg_color = Color(0.06666667, 0.06666667, 0.06666667, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbv2j"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="PauseMenu" type="CanvasLayer" unique_id=1256976073]
process_mode = 3
layer = 100
script = ExtResource("1_3al74")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1287267037]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2002588729]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Filler" type="Control" parent="VBoxContainer" unique_id=822795639]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer" unique_id=1446500051]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rhd5n")
theme_override_font_sizes/font_size = 96
text = "-Paused-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Filler2" type="Control" parent="VBoxContainer" unique_id=466693575]
layout_mode = 2
size_flags_vertical = 3

[node name="MasterVolumeSlider" parent="VBoxContainer" unique_id=1573932112 instance=ExtResource("3_lxy0p")]
layout_mode = 2
size_flags_horizontal = 4
bus_name = "Master"
make_tick_sound = true

[node name="MusicVolumeSlider" parent="VBoxContainer" unique_id=1627675121 instance=ExtResource("3_lxy0p")]
layout_mode = 2
size_flags_horizontal = 4
bus_name = "Music"

[node name="SFXVolumeSlider" parent="VBoxContainer" unique_id=1499152312 instance=ExtResource("3_lxy0p")]
layout_mode = 2
size_flags_horizontal = 4
bus_name = "SFX"
make_tick_sound = true

[node name="Filler3" type="Control" parent="VBoxContainer" unique_id=1404299121]
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="VBoxContainer" unique_id=2047862733]
custom_minimum_size = Vector2(250, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_rhd5n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_3al74")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6nv7")
theme_override_styles/hover = SubResource("StyleBoxFlat_vbv2j")
text = "Resume"

[node name="MainMenuButton" type="Button" parent="VBoxContainer" unique_id=583571279]
custom_minimum_size = Vector2(250, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_rhd5n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_3al74")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6nv7")
theme_override_styles/hover = SubResource("StyleBoxFlat_vbv2j")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=668813991]
custom_minimum_size = Vector2(250, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_rhd5n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_3al74")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6nv7")
theme_override_styles/hover = SubResource("StyleBoxFlat_vbv2j")
text = "Quit"

[node name="Filler4" type="Control" parent="VBoxContainer" unique_id=912899579]
layout_mode = 2
size_flags_vertical = 3

[node name="Filler5" type="Control" parent="VBoxContainer" unique_id=1102917969]
layout_mode = 2
size_flags_vertical = 3

[node name="PauseSound" type="AudioStreamPlayer" parent="." unique_id=1932190765]
stream = ExtResource("3_q1l4m")
volume_db = -6.0
bus = &"SFX"

[node name="UnpauseSound" type="AudioStreamPlayer" parent="." unique_id=1492985917]
stream = ExtResource("4_lxy0p")
volume_db = -6.0
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
